// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. daily universal register 1`] = `
<style>
.IS1 {
  height: 73;
  margin-vertical: 10px;
  width: 285;
}

.IS2 {
  color: rgba(133,0,41,1.00);
  font-family: TimesDigitalW04;
  font-size: 16px;
  margin-bottom: 25px;
}

.IS3 {
  border-bottom-color: rgba(219,219,219,1.00);
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
  margin-top: 25px;
  margin-bottom: 25px;
  width: 100%;
}

.IS4 {
  border-bottom-color: rgba(219,219,219,1.00);
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
  margin-top: 25px;
  margin-bottom: 25px;
  width: 100%;
}

.IS5 {
  height: 45;
  width: 60;
}

.IS6 {
  border-bottom-color: rgba(219,219,219,1.00);
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
  margin-top: 25px;
  margin-bottom: 25px;
  width: 100%;
}

.IS7 {
  height: 45;
  width: 60;
}

.IS8 {
  -webkit-align-items: center;
  align-items: center;
  background-color: rgba(240,240,240,1.00);
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  padding-right: 25%;
  padding-left: 25%;
  -ms-flex-align: center;
  -webkit-box-align: center;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS9 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="css-view-1dbjc4n IS9"
>
  <div
    className="css-view-1dbjc4n IS8"
  >
    <Image
      aspectRatio={1}
      className="IS1"
      uri="https://www.thetimes.co.uk/d/img/DUR-masthead-40fe00731f.png"
    />
    <div
      className="css-text-76zvg2 IS2"
    >
      Daily Universal Register
    </div>
    <TileS />
    <div
      className="css-view-1dbjc4n IS3"
    />
    <TileS />
    <div
      className="css-view-1dbjc4n IS4"
    />
    <Image
      aspectRatio={1}
      className="IS5"
      uri="https://www.thetimes.co.uk/d/img/DUR-nature-80d36dd1cd.png"
    />
    <TileS />
    <div
      className="css-view-1dbjc4n IS6"
    />
    <Image
      aspectRatio={1}
      className="IS7"
      uri="https://www.thetimes.co.uk/d/img/DUR-birthdays-94b2272911.png"
    />
    <TileS />
  </div>
</div>
`;

exports[`1. secondary one and four 1`] = `
<style>
.IS1 {
  background-color: rgba(39,45,52,1.00);
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 10px;
  margin-right: 10px;
  margin-left: 10px;
  margin-bottom: 10px;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS2 {
  border-bottom-color: rgba(77,77,77,1.00);
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS3 {
  width: 50%;
}

.IS4 {
  border-top-color: rgba(77,77,77,1.00);
  border-right-color: rgba(77,77,77,1.00);
  border-bottom-color: rgba(77,77,77,1.00);
  border-left-color: rgba(77,77,77,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS5 {
  border-bottom-width: 1px;
  border-top-color: rgba(77,77,77,1.00);
  border-right-color: rgba(77,77,77,1.00);
  border-bottom-color: rgba(77,77,77,1.00);
  border-left-color: rgba(77,77,77,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS6 {
  width: 25%;
}

.IS7 {
  border-top-color: rgba(77,77,77,1.00);
  border-right-color: rgba(77,77,77,1.00);
  border-bottom-color: rgba(77,77,77,1.00);
  border-left-color: rgba(77,77,77,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS8 {
  border-bottom-width: 1px;
  border-top-color: rgba(77,77,77,1.00);
  border-right-color: rgba(77,77,77,1.00);
  border-bottom-color: rgba(77,77,77,1.00);
  border-left-color: rgba(77,77,77,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS9 {
  width: 25%;
}

.IS10 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS11 {
  background-color: rgba(39,45,52,1.00);
  padding-right: 10px;
  padding-left: 10px;
}

.IS12 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}

.IS13 {
  background-color: rgba(39,45,52,1.00);
}
</style>

<div
  className="css-view-1dbjc4n IS13"
>
  <div
    className="css-view-1dbjc4n IS12"
  >
    <div
      className="css-view-1dbjc4n IS11"
    >
      <div
        className="css-view-1dbjc4n IS1"
      >
        <TheSTLogo
          height={40}
          width={60}
        />
      </div>
      <div
        className="css-view-1dbjc4n IS2"
      />
      <div
        className="css-view-1dbjc4n IS10"
      >
        <div
          className="css-view-1dbjc4n IS3"
        >
          <div
            className="css-view-1dbjc4n"
          >
            <TileN
              breakpoint="wide"
              tileName="secondary"
            />
          </div>
        </div>
        <div
          className="css-view-1dbjc4n IS4"
        />
        <div
          className="css-view-1dbjc4n IS6"
        >
          <div
            className="css-view-1dbjc4n"
          >
            <TileO
              tileName="support1"
            />
          </div>
          <div
            className="css-view-1dbjc4n IS5"
          />
          <div
            className="css-view-1dbjc4n"
          >
            <TileO
              tileName="support3"
            />
          </div>
        </div>
        <div
          className="css-view-1dbjc4n IS7"
        />
        <div
          className="css-view-1dbjc4n IS9"
        >
          <div
            className="css-view-1dbjc4n"
          >
            <TileO
              tileName="support2"
            />
          </div>
          <div
            className="css-view-1dbjc4n IS8"
          />
          <div
            className="css-view-1dbjc4n"
          >
            <TileO
              tileName="support4"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`1. secondary one and four 2`] = `
<style>
.IS1 {
  background-color: rgba(39,45,52,1.00);
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 10px;
  margin-right: 10px;
  margin-left: 10px;
  margin-bottom: 10px;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS2 {
  border-bottom-color: rgba(77,77,77,1.00);
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS3 {
  width: 50%;
}

.IS4 {
  border-top-color: rgba(77,77,77,1.00);
  border-right-color: rgba(77,77,77,1.00);
  border-bottom-color: rgba(77,77,77,1.00);
  border-left-color: rgba(77,77,77,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS5 {
  border-bottom-width: 1px;
  border-top-color: rgba(77,77,77,1.00);
  border-right-color: rgba(77,77,77,1.00);
  border-bottom-color: rgba(77,77,77,1.00);
  border-left-color: rgba(77,77,77,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS6 {
  width: 25%;
}

.IS7 {
  border-top-color: rgba(77,77,77,1.00);
  border-right-color: rgba(77,77,77,1.00);
  border-bottom-color: rgba(77,77,77,1.00);
  border-left-color: rgba(77,77,77,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS8 {
  border-bottom-width: 1px;
  border-top-color: rgba(77,77,77,1.00);
  border-right-color: rgba(77,77,77,1.00);
  border-bottom-color: rgba(77,77,77,1.00);
  border-left-color: rgba(77,77,77,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS9 {
  width: 25%;
}

.IS10 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS11 {
  background-color: rgba(39,45,52,1.00);
  padding-right: 10px;
  padding-left: 10px;
}

.IS12 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}

.IS13 {
  background-color: rgba(39,45,52,1.00);
}
</style>

<div
  className="css-view-1dbjc4n IS13"
>
  <div
    className="css-view-1dbjc4n IS12"
  >
    <div
      className="css-view-1dbjc4n IS11"
    >
      <div
        className="css-view-1dbjc4n IS1"
      >
        <TheTimesLogo
          height={40}
          width={42}
        />
      </div>
      <div
        className="css-view-1dbjc4n IS2"
      />
      <div
        className="css-view-1dbjc4n IS10"
      >
        <div
          className="css-view-1dbjc4n IS3"
        >
          <div
            className="css-view-1dbjc4n"
          >
            <TileN
              breakpoint="wide"
              tileName="secondary"
            />
          </div>
        </div>
        <div
          className="css-view-1dbjc4n IS4"
        />
        <div
          className="css-view-1dbjc4n IS6"
        >
          <div
            className="css-view-1dbjc4n"
          >
            <TileO
              tileName="support1"
            />
          </div>
          <div
            className="css-view-1dbjc4n IS5"
          />
          <div
            className="css-view-1dbjc4n"
          >
            <TileO
              tileName="support3"
            />
          </div>
        </div>
        <div
          className="css-view-1dbjc4n IS7"
        />
        <div
          className="css-view-1dbjc4n IS9"
        >
          <div
            className="css-view-1dbjc4n"
          >
            <TileO
              tileName="support2"
            />
          </div>
          <div
            className="css-view-1dbjc4n IS8"
          />
          <div
            className="css-view-1dbjc4n"
          >
            <TileO
              tileName="support4"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`2. lead one full width 1`] = `
<style>
.IS1 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="css-view-1dbjc4n IS1"
>
  <TileR
    tileName="lead"
  />
</div>
`;

exports[`2. leaders 1`] = `
<style>
.IS1 {
  height: 54;
  width: 283;
}

.IS2 {
  color: rgba(133,0,41,1.00);
  font-family: TimesDigitalW04-Regular;
  font-size: 16px;
  line-height: 18px;
  text-align: center;
}

.IS3 {
  padding-bottom: 5px;
  padding-top: 10px;
}

.IS4 {
  -webkit-align-items: center;
  align-items: center;
  -ms-flex-align: center;
  -webkit-box-align: center;
}

.IS5 {
  padding-right: 10px;
  padding-left: 10px;
  width: 33%;
}

.IS6 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS7 {
  padding-right: 10px;
  padding-left: 10px;
  width: 33%;
}

.IS8 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS9 {
  padding-right: 10px;
  padding-left: 10px;
  width: 33%;
}

.IS10 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-bottom: 5px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS11 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}

.IS12 {
  background-color: rgba(240,240,240,1.00);
  padding-top: 20px;
}
</style>

<div
  className="css-view-1dbjc4n IS12"
>
  <div
    className="css-view-1dbjc4n IS4"
  >
    <Image
      aspectRatio={5.4}
      className="IS1"
      uri="https://www.thetimes.co.uk/d/img/logos/sundaytimes-with-crest-black-53d6e31fb8.png"
    />
    <div
      className="css-view-1dbjc4n IS3"
    >
      <div
        className="css-text-76zvg2 IS2"
      >
         Leading Articles 
      </div>
    </div>
  </div>
  <div
    className="css-view-1dbjc4n IS11"
  >
    <div
      className="css-view-1dbjc4n IS10"
    >
      <div
        className="css-view-1dbjc4n IS5"
      >
        <TileAG
          tileName="leader2"
        />
      </div>
      <div
        className="css-view-1dbjc4n IS6"
      />
      <div
        className="css-view-1dbjc4n IS7"
      >
        <TileAG
          tileName="leader1"
        />
      </div>
      <div
        className="css-view-1dbjc4n IS8"
      />
      <div
        className="css-view-1dbjc4n IS9"
      >
        <TileAG
          tileName="leader3"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`2. leaders 2`] = `
<style>
.IS1 {
  height: 51;
  width: 283;
}

.IS2 {
  color: rgba(133,0,41,1.00);
  font-family: TimesDigitalW04-Regular;
  font-size: 16px;
  line-height: 18px;
  text-align: center;
}

.IS3 {
  padding-bottom: 5px;
  padding-top: 10px;
}

.IS4 {
  -webkit-align-items: center;
  align-items: center;
  -ms-flex-align: center;
  -webkit-box-align: center;
}

.IS5 {
  padding-right: 10px;
  padding-left: 10px;
  width: 33%;
}

.IS6 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS7 {
  padding-right: 10px;
  padding-left: 10px;
  width: 33%;
}

.IS8 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS9 {
  padding-right: 10px;
  padding-left: 10px;
  width: 33%;
}

.IS10 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-bottom: 5px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS11 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}

.IS12 {
  background-color: rgba(240,240,240,1.00);
  padding-top: 20px;
}
</style>

<div
  className="css-view-1dbjc4n IS12"
>
  <div
    className="css-view-1dbjc4n IS4"
  >
    <Image
      aspectRatio={5.74}
      className="IS1"
      uri="https://www.thetimes.co.uk/d/img/leaders-masthead-d17db00289.png"
    />
    <div
      className="css-view-1dbjc4n IS3"
    >
      <div
        className="css-text-76zvg2 IS2"
      >
         Leading Articles 
      </div>
    </div>
  </div>
  <div
    className="css-view-1dbjc4n IS11"
  >
    <div
      className="css-view-1dbjc4n IS10"
    >
      <div
        className="css-view-1dbjc4n IS5"
      >
        <TileAG
          tileName="leader2"
        />
      </div>
      <div
        className="css-view-1dbjc4n IS6"
      />
      <div
        className="css-view-1dbjc4n IS7"
      >
        <TileAG
          tileName="leader1"
        />
      </div>
      <div
        className="css-view-1dbjc4n IS8"
      />
      <div
        className="css-view-1dbjc4n IS9"
      >
        <TileAG
          tileName="leader3"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`3. lead one and one 1`] = `
<style>
.IS1 {
  width: 83.33%;
}

.IS2 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS3 {
  width: 16.67%;
}

.IS4 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-right: 10px;
  margin-left: 10px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS5 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="css-view-1dbjc4n IS5"
>
  <div
    className="css-view-1dbjc4n IS4"
  >
    <div
      className="css-view-1dbjc4n IS1"
    >
      <TileU
        tileName="lead"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS2"
    />
    <div
      className="css-view-1dbjc4n IS3"
    >
      <TileC
        tileName="support"
      />
    </div>
  </div>
</div>
`;

exports[`4. lead one and four 1`] = `
<style>
.IS1 {
  padding-top: 10px;
  padding-right: 10px;
  padding-bottom: 10px;
  padding-left: 10px;
  width: 50%;
}

.IS2 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS3 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS4 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS5 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS6 {
  width: 50%;
}

.IS7 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-right: 10px;
  padding-left: 10px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS8 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="css-view-1dbjc4n IS8"
>
  <div
    className="css-view-1dbjc4n IS7"
  >
    <div
      className="css-view-1dbjc4n IS1"
    >
      <TileAC
        breakpoint="wide"
        tileName="lead"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS2"
    />
    <div
      className="css-view-1dbjc4n IS6"
    >
      <TileAD
        breakpoint="wide"
        tileName="support1"
      />
      <div
        className="css-view-1dbjc4n IS3"
      />
      <TileAD
        breakpoint="wide"
        tileName="support2"
      />
      <div
        className="css-view-1dbjc4n IS4"
      />
      <TileAD
        breakpoint="wide"
        tileName="support3"
      />
      <div
        className="css-view-1dbjc4n IS5"
      />
      <TileAD
        breakpoint="wide"
        tileName="support4"
      />
    </div>
  </div>
</div>
`;

exports[`5. standard 1`] = `
<style>
.IS1 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS2 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS3 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS4 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS5 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-right: 50px;
  padding-left: 50px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS6 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="css-view-1dbjc4n IS6"
>
  <div
    className="css-view-1dbjc4n IS5"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <TileK
        breakpoint="wide"
      />
      <div
        className="css-view-1dbjc4n IS1"
      />
      <TileK
        breakpoint="wide"
      />
      <div
        className="css-view-1dbjc4n IS2"
      />
      <TileK
        breakpoint="wide"
      />
      <div
        className="css-view-1dbjc4n IS3"
      />
      <TileK
        breakpoint="wide"
      />
      <div
        className="css-view-1dbjc4n IS4"
      />
      <TileK
        breakpoint="wide"
      />
    </div>
  </div>
</div>
`;

exports[`6. lead two no pic and two 1`] = `
<style>
.IS1 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS2 {
  width: 42%;
}

.IS3 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS4 {
  width: 16%;
}

.IS5 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS6 {
  width: 42%;
}

.IS7 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-justify-content: center;
  justify-content: center;
  padding-right: 10px;
  padding-left: 10px;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -ms-flex-pack: center;
  -webkit-box-pack: center;
}

.IS8 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="css-view-1dbjc4n IS8"
>
  <div
    className="css-view-1dbjc4n IS7"
  >
    <div
      className="css-view-1dbjc4n IS2"
    >
      <TileX
        tileName="lead1"
      />
      <div
        className="css-view-1dbjc4n IS1"
      />
      <TileY
        tileName="lead2"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS3"
    />
    <div
      className="css-view-1dbjc4n IS4"
    >
      <TileAL
        tileName="support1"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS5"
    />
    <div
      className="css-view-1dbjc4n IS6"
    >
      <TileZ
        tileName="support2"
      />
    </div>
  </div>
</div>
`;

exports[`7. secondary one 1`] = `
<style>
.IS1 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="css-view-1dbjc4n IS1"
>
  <TileW
    tileName="secondary"
  />
</div>
`;

exports[`8. secondary one and columnist 1`] = `
<style>
.IS1 {
  padding-left: 10px;
  padding-top: 10px;
  width: 33%;
}

.IS2 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS3 {
  padding-right: 10px;
  width: 67%;
}

.IS4 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS5 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="css-view-1dbjc4n IS5"
>
  <div
    className="css-view-1dbjc4n IS4"
  >
    <div
      className="css-view-1dbjc4n IS1"
    >
      <TileAA
        tileName="secondary"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS2"
    />
    <div
      className="css-view-1dbjc4n IS3"
    >
      <TileAB
        tileName="columnist"
      />
    </div>
  </div>
</div>
`;

exports[`9. secondary four 1`] = `
<style>
.IS1 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  width: 25%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS2 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS3 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  width: 25%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS4 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS5 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  width: 25%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS6 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS7 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  width: 25%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS8 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-right: 10px;
  margin-left: 10px;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS9 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="css-view-1dbjc4n IS9"
>
  <div
    className="css-view-1dbjc4n IS8"
  >
    <div
      className="css-view-1dbjc4n IS1"
    >
      <TileC
        tileName="secondary1"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS2"
    />
    <div
      className="css-view-1dbjc4n IS3"
    >
      <TileC
        tileName="secondary2"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS4"
    />
    <div
      className="css-view-1dbjc4n IS5"
    >
      <TileC
        tileName="secondary3"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS6"
    />
    <div
      className="css-view-1dbjc4n IS7"
    >
      <TileC
        tileName="secondary4"
      />
    </div>
  </div>
</div>
`;

exports[`10. secondary one and four 1`] = `
<style>
.IS1 {
  background-color: rgba(39,45,52,1.00);
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 10px;
  margin-right: 10px;
  margin-left: 10px;
  margin-bottom: 10px;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS2 {
  border-bottom-color: rgba(77,77,77,1.00);
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS3 {
  width: 50%;
}

.IS4 {
  border-top-color: rgba(77,77,77,1.00);
  border-right-color: rgba(77,77,77,1.00);
  border-bottom-color: rgba(77,77,77,1.00);
  border-left-color: rgba(77,77,77,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS5 {
  border-bottom-width: 1px;
  border-top-color: rgba(77,77,77,1.00);
  border-right-color: rgba(77,77,77,1.00);
  border-bottom-color: rgba(77,77,77,1.00);
  border-left-color: rgba(77,77,77,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS6 {
  width: 25%;
}

.IS7 {
  border-top-color: rgba(77,77,77,1.00);
  border-right-color: rgba(77,77,77,1.00);
  border-bottom-color: rgba(77,77,77,1.00);
  border-left-color: rgba(77,77,77,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS8 {
  border-bottom-width: 1px;
  border-top-color: rgba(77,77,77,1.00);
  border-right-color: rgba(77,77,77,1.00);
  border-bottom-color: rgba(77,77,77,1.00);
  border-left-color: rgba(77,77,77,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS9 {
  width: 25%;
}

.IS10 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS11 {
  background-color: rgba(39,45,52,1.00);
  padding-right: 10px;
  padding-left: 10px;
}

.IS12 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}

.IS13 {
  background-color: rgba(39,45,52,1.00);
}
</style>

<div
  className="css-view-1dbjc4n IS13"
>
  <div
    className="css-view-1dbjc4n IS12"
  >
    <div
      className="css-view-1dbjc4n IS11"
    >
      <div
        className="css-view-1dbjc4n IS1"
      >
        <TheTimesLogo
          height={40}
          width={42}
        />
      </div>
      <div
        className="css-view-1dbjc4n IS2"
      />
      <div
        className="css-view-1dbjc4n IS10"
      >
        <div
          className="css-view-1dbjc4n IS3"
        >
          <div
            className="css-view-1dbjc4n"
          >
            <TileN
              breakpoint="wide"
              tileName="secondary"
            />
          </div>
        </div>
        <div
          className="css-view-1dbjc4n IS4"
        />
        <div
          className="css-view-1dbjc4n IS6"
        >
          <div
            className="css-view-1dbjc4n"
          >
            <TileO
              tileName="support1"
            />
          </div>
          <div
            className="css-view-1dbjc4n IS5"
          />
          <div
            className="css-view-1dbjc4n"
          >
            <TileO
              tileName="support3"
            />
          </div>
        </div>
        <div
          className="css-view-1dbjc4n IS7"
        />
        <div
          className="css-view-1dbjc4n IS9"
        >
          <div
            className="css-view-1dbjc4n"
          >
            <TileO
              tileName="support2"
            />
          </div>
          <div
            className="css-view-1dbjc4n IS8"
          />
          <div
            className="css-view-1dbjc4n"
          >
            <TileO
              tileName="support4"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`11. secondary two and two 1`] = `
<style>
.IS1 {
  width: 33.4%;
}

.IS2 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS3 {
  width: 16.6%;
}

.IS4 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS5 {
  width: 33.4%;
}

.IS6 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS7 {
  width: 16.6%;
}

.IS8 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS9 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="css-view-1dbjc4n IS9"
>
  <div
    className="css-view-1dbjc4n IS8"
  >
    <div
      className="css-view-1dbjc4n IS1"
    >
      <TileAM
        tileName="secondary1"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS2"
    />
    <div
      className="css-view-1dbjc4n IS3"
    >
      <TileAN
        tileName="support1"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS4"
    />
    <div
      className="css-view-1dbjc4n IS5"
    >
      <TileAM
        tileName="secondary2"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS6"
    />
    <div
      className="css-view-1dbjc4n IS7"
    >
      <TileAN
        tileName="support2"
      />
    </div>
  </div>
</div>
`;

exports[`12. secondary two no pic and two 1`] = `
<style>
.IS1 {
  width: 33.4%;
}

.IS2 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS3 {
  padding-right: 5px;
  padding-left: 5px;
  width: 16.6%;
}

.IS4 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS5 {
  width: 33.4%;
}

.IS6 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS7 {
  padding-right: 5px;
  padding-left: 5px;
  width: 16.6%;
}

.IS8 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-right: 10px;
  margin-left: 10px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS9 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="css-view-1dbjc4n IS9"
>
  <div
    className="css-view-1dbjc4n IS8"
  >
    <div
      className="css-view-1dbjc4n IS1"
    >
      <TileAE
        tileName="secondary1"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS2"
    />
    <div
      className="css-view-1dbjc4n IS3"
    >
      <TileAP
        tileName="support1"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS4"
    />
    <div
      className="css-view-1dbjc4n IS5"
    >
      <TileAE
        tileName="secondary2"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS6"
    />
    <div
      className="css-view-1dbjc4n IS7"
    >
      <TileAP
        tileName="support2"
      />
    </div>
  </div>
</div>
`;

exports[`13. list two and six no pic 1`] = `
<style>
.IS1 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS2 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS3 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS4 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS5 {
  width: 50%;
}

.IS6 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS7 {
  width: 50%;
}

.IS8 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS9 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS10 {
  width: 50%;
}

.IS11 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS12 {
  width: 50%;
}

.IS13 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS14 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS15 {
  width: 50%;
}

.IS16 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS17 {
  width: 50%;
}

.IS18 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS19 {
  width: 50%;
}

.IS20 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-right: 10px;
  margin-left: 10px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS21 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="css-view-1dbjc4n IS21"
>
  <div
    className="css-view-1dbjc4n IS20"
  >
    <div
      className="css-view-1dbjc4n IS1"
    >
      <TileC
        tileName="lead1"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS2"
    />
    <div
      className="css-view-1dbjc4n IS3"
    >
      <TileC
        tileName="lead2"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS4"
    />
    <div
      className="css-view-1dbjc4n IS19"
    >
      <div
        className="css-view-1dbjc4n IS8"
      >
        <div
          className="css-view-1dbjc4n IS5"
        >
          <TileL
            tileName="support1"
          />
        </div>
        <div
          className="css-view-1dbjc4n IS6"
        />
        <div
          className="css-view-1dbjc4n IS7"
        >
          <TileL
            tileName="support2"
          />
        </div>
      </div>
      <div
        className="css-view-1dbjc4n IS9"
      />
      <div
        className="css-view-1dbjc4n IS13"
      >
        <div
          className="css-view-1dbjc4n IS10"
        >
          <TileL
            tileName="support3"
          />
        </div>
        <div
          className="css-view-1dbjc4n IS11"
        />
        <div
          className="css-view-1dbjc4n IS12"
        >
          <TileL
            tileName="support4"
          />
        </div>
      </div>
      <div
        className="css-view-1dbjc4n IS14"
      />
      <div
        className="css-view-1dbjc4n IS18"
      >
        <div
          className="css-view-1dbjc4n IS15"
        >
          <TileL
            tileName="support5"
          />
        </div>
        <div
          className="css-view-1dbjc4n IS16"
        />
        <div
          className="css-view-1dbjc4n IS17"
        >
          <TileL
            tileName="support6"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`14. leaders 1`] = `
<style>
.IS1 {
  height: 51;
  width: 283;
}

.IS2 {
  color: rgba(133,0,41,1.00);
  font-family: TimesDigitalW04-Regular;
  font-size: 16px;
  line-height: 18px;
  text-align: center;
}

.IS3 {
  padding-bottom: 5px;
  padding-top: 10px;
}

.IS4 {
  -webkit-align-items: center;
  align-items: center;
  -ms-flex-align: center;
  -webkit-box-align: center;
}

.IS5 {
  padding-right: 10px;
  padding-left: 10px;
  width: 33%;
}

.IS6 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS7 {
  padding-right: 10px;
  padding-left: 10px;
  width: 33%;
}

.IS8 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS9 {
  padding-right: 10px;
  padding-left: 10px;
  width: 33%;
}

.IS10 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-bottom: 5px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS11 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}

.IS12 {
  background-color: rgba(240,240,240,1.00);
  padding-top: 20px;
}
</style>

<div
  className="css-view-1dbjc4n IS12"
>
  <div
    className="css-view-1dbjc4n IS4"
  >
    <Image
      aspectRatio={5.74}
      className="IS1"
      uri="https://www.thetimes.co.uk/d/img/leaders-masthead-d17db00289.png"
    />
    <div
      className="css-view-1dbjc4n IS3"
    >
      <div
        className="css-text-76zvg2 IS2"
      >
         Leading Articles 
      </div>
    </div>
  </div>
  <div
    className="css-view-1dbjc4n IS11"
  >
    <div
      className="css-view-1dbjc4n IS10"
    >
      <div
        className="css-view-1dbjc4n IS5"
      >
        <TileAG
          tileName="leader2"
        />
      </div>
      <div
        className="css-view-1dbjc4n IS6"
      />
      <div
        className="css-view-1dbjc4n IS7"
      >
        <TileAG
          tileName="leader1"
        />
      </div>
      <div
        className="css-view-1dbjc4n IS8"
      />
      <div
        className="css-view-1dbjc4n IS9"
      >
        <TileAG
          tileName="leader3"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`15. comment lead and cartoon 1`] = `
<style>
.IS1 {
  width: 33.3%;
}

.IS2 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS3 {
  width: 66.7%;
}

.IS4 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-right: 20px;
  padding-top: 10px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS5 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="css-view-1dbjc4n IS5"
>
  <div
    className="css-view-1dbjc4n IS4"
  >
    <div
      className="css-view-1dbjc4n IS1"
    >
      <TileAH
        tileName="lead"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS2"
    />
    <div
      className="css-view-1dbjc4n IS3"
    >
      <TileAI
        tileName="cartoon"
      />
    </div>
  </div>
</div>
`;

exports[`16. puzzle 1`] = `
<style>
.IS1 {
  width: 33%;
}

.IS2 {
  width: 33%;
}

.IS3 {
  width: 33%;
}

.IS4 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-right: 15px;
  padding-left: 15px;
  padding-top: 10px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS5 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="css-view-1dbjc4n IS5"
>
  <div
    className="css-view-1dbjc4n IS4"
  >
    <div
      className="css-view-1dbjc4n IS1"
    >
      <TileAK
        id="0"
        image={
          Object {
            "crop11": null,
            "crop169": null,
            "crop23": null,
            "crop32": Object {
              "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
            },
            "crop45": null,
            "crops": Array [],
            "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
          }
        }
        title="Times Concise medium No 7881"
        url="/crossword/123"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS2"
    >
      <TileAK
        id="1"
        image={
          Object {
            "crop11": null,
            "crop169": null,
            "crop23": null,
            "crop32": Object {
              "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
            },
            "crop45": null,
            "crops": Array [],
            "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
          }
        }
        title="Times Concise medium No 7881"
        url="/crossword/123"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS3"
    >
      <TileAK
        id="2"
        image={
          Object {
            "crop11": null,
            "crop169": null,
            "crop23": null,
            "crop32": Object {
              "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
            },
            "crop45": null,
            "crops": Array [],
            "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
          }
        }
        title="Times Concise medium No 7881"
        url="/crossword/123"
      />
    </div>
  </div>
</div>
`;
